data/derived/comb/progs/unify/prog3869.ml.out
Characters 76-94:
  | hd::tl -> helper (hd::xs) tl
              ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'a list
